kubernetes/namespace.yml
#berisi kumpulan namespace sebenarnya tanpa manifes
#kubectl create namespace *nama_namespace
apiVersion: v1
kind: Namespace
metadata:
  name: karsajob
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
