kubernetes/testmongo.yml
apiVersion: v1
kind: Pod
metadata:
  name: mongo-client
  namespace: karsajob
spec:
  containers:
  - name: mongo-client
    image: mongo:6
    command: ["sleep", "3600"]
